feat: sp1-15-auth-activation-user-p2
